# egui-serial

./: Cargo.toml
src/: gui.rs  main.rs  serial.rs
