[package]
name = "serial-monitor-rust"
version = "0.1.1"
edition = "2021"
authors = ["Linus Leo Stöckli"]
description = "Serial Monitor and Plotter written in rust."
license = "GPL-3.0"
homepage = "https://github.com/hacknus/serial-monitor-rust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
eframe = { version = "0.22.0", features = ["persistence"] }
egui_extras = { version = "0.22.0", features = ["image"] }
hex = "0.4.3"
image = { version = "0.24.6", default-features = false, features = ["png"] }
itertools-num = "0.1.3"
#keepawake = { git = "https://github.com/segevfiner/keepawake-rs" }
preferences = { git = "https://github.com/andybarron/preferences-rs" }
#preferences = { version = "1.1.0" }
keepawake = { version = "0.4.2" }
rand = "0.8.5"
realfft = "3.3.0"
regex = "1.8.3"
rfd = "0.11.4"
safe-transmute = "0.11.2"
serde = { version = "1.0.163", features = ["derive"] }
serialport = { version = "4.2.1", features = ["serde"] }

[package.metadata.bundle]
name = "Serial Monitor"
identifier = "com.hacknus.serial_monitor"
icon = ["./icons/install.png"]
version = "0.1.1"
copyright = "Copyright (c) hacknus 2023. All rights reserved."
category = "Developer Tool"
short_description = "Serial Monitor and Plotter written in rust."
license = "GPL-3.0"
osx_minimum_system_version = "10.8"
osx_url_schemes = ["com.hacknus.serial_monitor"]

[package.metadata.wix]
dbg-build = false
dbg-name = false
name = "Serial Monitor"
no-build = false
output = "target/wix/SerialMonitorInstaller.msi"
version = "0.1.1"
license = "GPL-3.0"